# libagio

./: .gitignore  CMakeLists.txt  Doxyfile  PFunction.h  README.md  libParsley.pc.in  libParsley.pro  libagio.pc.in  libparsley.pro
.github/workflows/: ccpp.yml
docker/: Dockerfile  docker-compose.yml
docker/libagio-build/: Dockerfile  docker-compose.yml
docs/: conf.py  index.rst
docs/documentation/: api_documentation.rst
docs/examples/: timer.rst
docs/get_started/: introduction.rst
docs/overview/: introduction.rst
examples/async_event/timer_call_async/: main.cpp
examples/lib/: CMakeLists.txt  main.cpp
examples/tcp/client/: CMakeLists.txt  main.cpp  tcp_client.pro
examples/tcp/pclient/: main.cpp
examples/tcp/pserver/: main.cpp  tcp_server.pro
examples/tcp/server/: CMakeLists.txt  main.cpp  tcp_server.pro  testPFile.pro
examples/timer/: main.cpp
examples/udp/broadcast/: main.cpp  udp.pro
examples/udp/echo/: main.cpp
include/: PAbstractSocket.h  PAddress.h  PAsync.h  PBuffer.h  PCheck.h  PFile.h  PFunction.h  PFunction.h.autosave  PTcpServer.h  PTcpSocket.h  PTimer.h  PUdpSocket.h  PUtils.h  Parsley.h  abstract_socket.h  address.h  agio.h  async.h  async_event.h  buffer.h  callback.h  callback_async.h  check.h  file.h  function.h  lib.h  loop.h  parsley.h  promise.h  proto_engine.h  proto_utils.h  protocol_utils.h  service.h  stream.h  tcp_server.h  tcp_socket.h  timer.h  udp_socket.h  utils.h  variant.h
pkg-config/: libparsley.pc
src/: PAbstractSocket.cpp  PAbstractSocket.h  PAddress.cpp  PAddress.h  PAsync.cpp  PAsync.h  PBuffer.cpp  PCheck.cpp  PCheck.h  PFile.cpp  PFile.h  PFunction.cpp  PLoop.cpp  PLoop.h  PTcpServer.cpp  PTcpServer.cpp.autosave  PTcpServer.h  PTcpSocket.cpp  PTcpSocket.cpp.autosave  PTcpSocket.h  PTcpSocket.h.autosave  PTimer.cpp  PTimer.h  PUdpSocket.cpp  PUdpSocket.h  PUtils.cpp  PUtils.h  Parsley.cpp  Parsley.h  abstract_socket.cpp  address.cpp  agio.cpp  async.cpp  async_event.cpp  buffer.cpp  check.cpp  file.cpp  lib.cpp  libParsley.pro  loop.cpp  (+13 more)
test/: CMakeLists.txt  test_buffer.cpp  test_callback_async.cpp  test_file.cpp  test_host_address.cpp  test_protocol_utils.cpp  test_utils.h
test/testPFile/: main.cpp  testPFile.pro
